[tool.poetry]
name = "codetest"
version = "0.1.0"
description = ""
authors = ["shohei0203 <umegiwa@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.0"
uvicorn = {extras = ["standard"], version = "^0.17.5"}
PyMySQL = "^1.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
